grammar.js
    source_file: ($) => repeat($._top_level_item),

    _top_level_item: ($) =>
      choice(
        prec.dynamic(1, $.declaration),
        $.function_definition,
        $._top_level_statement,
        $.attributed_statement,
        $.class_definition,
        $.interface_definition,
        $.mixin_definition,
        $.enum_specifier,
        $.typedef_declaration,
        $.funcdef_declaration,
        $.namespace_definition,
        $.using_declaration,
        $.import_declaration,
        $.virtual_property_declaration
      ),

    _block_item: ($) =>
      choice(
        prec.dynamic(1, $.declaration),
        $.statement,
        $.attributed_statement,
        $.using_declaration
      ),

    comment: (_) =>
      token(
        choice(seq("//", /.*/), seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"))
      ),

    // Keywords
    return_keyword: (_) => "return",
    class_keyword: (_) => "class",
    enum_keyword: (_) => "enum",
    void_keyword: (_) => "void",
    bool_keyword: (_) => "bool",
    int_keyword: (_) => "int",
    float_keyword: (_) => "float",
    const_keyword: (_) => "const",
    final_keyword: (_) => "final",
    abstract_keyword: (_) => "abstract",
    private_keyword: (_) => "private",
    protected_keyword: (_) => "protected",
    shared_keyword: (_) => "shared",
    external_keyword: (_) => "external",
    scope_resolution: (_) => "::",
    plus_op: (_) => "+",
    mul_op: (_) => "*",
    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    _type_identifier: ($) => alias($.identifier, $.type_identifier),
    number_literal: (_) => {
      return token(
        choice(
          // Based numbers (no suffixes allowed)
          /0[xX][0-9a-fA-F]+/,
          /0[bB][01]+/,
          /0[oO][0-7]+/,
          /0[dD][0-9]+/,

          // Floating point patterns (with optional 'f'/'F' suffix)
          seq(
            /[0-9]+/,
            ".",
            /[0-9]+/,
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            optional(/[fF]/)
          ),

          seq(
            /[0-9]+/,
            ".",
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            optional(/[fF]/)
          ),

          seq(
            ".",
            /[0-9]+/,
            optional(seq(/[eE]/, optional(/[+-]/), /[0-9]+/)),
            optional(/[fF]/)
          ),

          seq(/[0-9]+/, /[eE]/, optional(/[+-]/), /[0-9]+/, optional(/[fF]/)),

          // Plain integers
          /[0-9]+/
        )
      );
    },

    declaration: ($) =>
      seq(
        optional($.access_specifier),
        field("type", $.type_descriptor),
        commaSep1(
          field("declarator", choice($._init_declarator, $._declarator))
        ),
        ";"
      ),

    _init_declarator: ($) =>
      choice(
        seq(
          field("declarator", $._declarator),
          "=",
          field("value", choice($.initializer_list, $.expression))
        ),
        seq(
          field("declarator", $._declarator),
          field("arguments", $.argument_list)
        )
      ),

    _declarator: ($) =>
      choice(
        $.attributed_declarator,
        $.reference_declarator,
        $.function_declarator,
        $.array_declarator,
        $.parenthesized_declarator,
        $.identifier,
        $.qualified_identifier,
        $.template_function
      ),

    function_declarator: ($) =>
      prec.right(
        1,
        seq(
          field("declarator", $._declarator),
          field("parameters", $.parameter_list),
          optional($.const_keyword),
          field("attributes", repeat($.function_attribute))
        )
      ),

    primitive_type: ($) =>
      choice(
        $.void_keyword,
        $.bool_keyword,
        $.int_keyword,
        $.int8_keyword,
        $.int16_keyword,
        $.int32_keyword,
        $.int64_keyword,
        $.uint_keyword,
        $.uint8_keyword,
        $.uint16_keyword,
        $.uint32_keyword,
        $.uint64_keyword,
        $.float_keyword,
        $.double_keyword
      ),

    access_specifier: ($) => choice($.private_keyword, $.protected_keyword),

    // Simplify type descriptor - combine suffixes
    type_descriptor: ($) =>
      seq(
        optional($.const_keyword),
        field("type", $.type_specifier),
        field("suffixes", repeat(choice($.array_suffix, $.handle_suffix)))
      ),

    array_suffix: (_) => seq("[", "]"),

    handle_suffix: ($) => seq("@", optional($.const_keyword)),

    template_type: ($) =>
      prec(
        1,
        seq(
          field("name", $._type_identifier),
          field("arguments", $.template_argument_list)
        )
      ),

    template_argument_list: ($) =>
      seq("<", commaSep1($.type_descriptor), alias(token(prec(1, ">")), ">")),

    qualified_type_identifier: ($) =>
      seq(
        optional($.scope_resolution),
        sep1(choice($._type_identifier, $.template_type), $.scope_resolution)
      ),

    parameter_list: ($) =>
      seq(
        "(",
        optional(
          choice(
            $.void_keyword,
            commaSep(choice($.parameter_declaration, $.variadic_parameter))
          )
        ),
        ")"
      ),

    parameter_declaration: ($) =>
      seq(
        field("type", $.type_descriptor),
        optional(
          field("declarator", choice($.reference_declarator, $.identifier))
        ),
        optional(seq("=", field("default_value", $.expression)))
      ),

    function_definition: ($) =>
      seq(
        optional($.attribute_specifier),
        field("modifiers", repeat($._shared_external)),
        optional($.access_specifier),
        field("return_type", $.type_descriptor),
        optional($.reference_operator),
        field("declarator", $.function_declarator),
        choice(
          field("body", $.compound_statement),
          seq("=", $.delete_keyword, ";"),
          ";"
        )
      ),

    class_definition: ($) =>
      seq(
        field("attributes", repeat($.class_attributes)),
        $.class_keyword,
        field("name", $._type_identifier),
        choice(
          seq(optional($.base_class_clause), field("body", $.class_body)),
          ";"
        )
      ),

    class_attributes: ($) =>
      choice($._shared_external, $.abstract_keyword, $.final_keyword),

    _shared_external: ($) => choice($.shared_keyword, $.external_keyword),

    base_class_clause: ($) => seq(":", commaSep1($.qualified_type_identifier)),

    class_body: ($) =>
      seq(
        "{",
        repeat(
          choice(
            $.function_definition,
            $.constructor_definition,
            $.destructor_definition,
            $.declaration,
            $.virtual_property_declaration,
            $.funcdef_declaration,
            ";"
          )
        ),
        "}"
      ),

    constructor_definition: ($) =>
      seq(
        optional($.access_specifier),
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        field("attributes", repeat($.function_attribute)),
        choice(
          field("body", $.compound_statement),
          seq("=", choice("default", $.delete_keyword), ";"),
          ";"
        )
      ),

    destructor_definition: ($) =>
      seq(
        optional($.access_specifier),
        "~",
        field("name", $.identifier),
        field("parameters", $.parameter_list),
        field("attributes", repeat($.function_attribute)),
        choice(field("body", $.compound_statement), ";")
      ),

    enum_specifier: ($) =>
      seq(
        field("modifiers", repeat($._shared_external)),
        $.enum_keyword,
        field("name", $._type_identifier),
        choice(field("body", $.enumerator_list), ";")
      ),

    enumerator_list: ($) =>
      seq("{", commaSep($.enumerator), optional(","), "}"),

    enumerator: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("=", field("value", $.expression)))
      ),

    compound_statement: ($) => seq("{", repeat($._block_item), "}"),

    return_statement: ($) => seq($.return_keyword, optional($.expression), ";"),

    primary_expression: ($) =>
      choice(
        $.identifier,
        $.qualified_identifier,
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.null_literal,
        $.parenthesized_expression,
        $.initializer_list,
        $.lambda_expression,
        $.template_function
      ),

    binary_expression: ($) => {
      const table = [
        [$.exp_op, PREC.POWER],
        [$.mul_op, PREC.MULTIPLY],
        [$.div_op, PREC.MULTIPLY],
        [$.mod_op, PREC.MULTIPLY],
        [$.plus_op, PREC.ADD],
        [$.sub_op, PREC.ADD],
        [$.lsl_op, PREC.SHIFT],
        [$.lsr_op, PREC.SHIFT],
        [$.asr_op, PREC.SHIFT],
        [$.lt_op, PREC.RELATIONAL],
        [$.lte_op, PREC.RELATIONAL],
        [$.gt_op, PREC.RELATIONAL],
        [$.gte_op, PREC.RELATIONAL],
        [$.eq_op, PREC.EQUAL],
        [$.neq_op, PREC.EQUAL],
        [$.is_operator, PREC.EQUAL],
        [$.not_is_operator, PREC.EQUAL],
        [$.bitand_op, PREC.BITWISE_AND],
        [$.bitxor_op, PREC.EXCLUSIVE_OR],
        [$.bitor_op, PREC.INCLUSIVE_OR],
        [$.andand_op, PREC.LOGICAL_AND],
        [$.and_operator, PREC.LOGICAL_AND],
        [$.xorxor_op, PREC.LOGICAL_XOR],
        [$.xor_operator, PREC.LOGICAL_XOR],
        [$.oror_op, PREC.LOGICAL_OR],
        [$.or_operator, PREC.LOGICAL_OR],
      ];

      return choice(
        ...table.map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression)
            )
          )
        )
      );
    },
